Developer/src/objects/Constants__c.object
<CustomObject>
    <fields>
        <fullName>Key1__c</fullName>
        <label>Key1</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key2__c</fullName>
        <label>Key2</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Constants</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Constants名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>